--- a/components/bundlers/webpack-css-modules/package.json
+++ b/components/bundlers/webpack-css-modules/package.json
@@ -4,24 +4,30 @@
   "homepage": "https://bit.dev/bit/envs/bundlers/webpack-css-modules",
   "main": "index.js",
   "dependencies": {
-    "memory-fs": "^0.4.1",
-    "vinyl": "^2.1.0",
-    "webpack": "^4.0.1",
-    "babel-core": "^6.26.0",
-    "babel-loader": "^7.1.2",
-    "babel-preset-es2015": "6.24.1",
-    "babel-preset-react": "^6.24.1",
-    "babel-preset-stage-0": "6.24.1",
+    "@babel/core": "^7.6.4",
+    "@babel/preset-env": "^7.6.3",
+    "@babel/preset-react": "^7.6.3",
+    "@babel/preset-typescript": "^7.6.0",
+    "babel-loader": "^8.0.6",
+    "babel-plugin-module-resolver": "^3.2.0",
     "css-loader": "^0.28.10",
     "json-loader": "^0.5.7",
+    "less-loader": "^5.0.0",
+    "memory-fs": "^0.4.1",
     "node-sass": "^4.7.2",
     "sass-loader": "^6.0.6",
     "style-loader": "^0.20.2",
     "url-loader": "^1.0.1",
+    "vinyl": "^2.1.0",
+    "webpack": "^4.0.1",
     "webpack-node-externals": "1.7.2"
   },
   "devDependencies": {},
   "peerDependencies": {},
-  "componentRootFolder": "components/bundlers/webpack-css-modules",
-  "license": "SEE LICENSE IN LICENSE"
+  "license": "SEE LICENSE IN LICENSE",
+  "bit": {
+    "env": {
+      "compiler": "bit.envs/compilers/babel@0.0.7"
+    }
+  }
 }
